2007-08-26  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column, ObjectList): Remove the cache
	property.
	(ObjectList): Refactor column and renderer handling to the
	Column

2007-08-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/listdialog.py (ListContainer._on_list__row_activated): 
	If we're editable open fire up edit signal when double clicking

2007-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add basic DND support

2007-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.prefill): Handle duplicate entries
	by adding (n) to the end of the name

2007-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column.as_string): Call format_func before
	checking the format and the datatype, it should override everything.

2007-07-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py (selectfolder): New function based
	around gtk.FILE_CHOOSER_ACTION_SELECT_FOLDER. Based on patch
	by Paul Eipper (#3490)

	* kiwi/ui/objectlist.py (Column): Add ellipsize and font-desc 
	properties. Handle list without selection. Add a font-desc
	parameter to ListLabel/SummaryLabel

2007-07-19 Fabio Morbec  <fabio@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (ProxyComboBoxEntry.prefill):
	Changed clear_entry param to True

2007-05-21  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:
	Release 1.9.16

2007-07-16  Johan Dahlin  <jdahlin@async.com.br>

	* po/pl.po: Add polish translation (Jarek Zgoda)

	* kiwi/ui/entry.py: Sometimes the entry completion breaks,
	#2901, patch by Ali Afshar.

2007-07-13  Fabio Morbec  <fabio@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (ComboEntry._on_entry__scroll_event):
	If don't have data in the model just return

2007-07-02  Johan Dahlin  <jdahlin@async.com.br>
